# tensorflow-cpp-op-example

./: CMakeLists.txt  README.md  _inner_product_grad.py  inner_product_tests.py
